[package]
name = "FxPing"
version = "0.2.0"
description = "FxPing is a free network tool that allows you to efficiently perform simultaneous ping tests to multiple IP addresses for connectivity monitoring."
authors = ["NAKAOKU Takahiro"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
path = "src/fxping.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surge-ping = "0.8.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros", "process"] }
chrono = { version = "0.4", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
dns-lookup = "2.0"
socket2 = { version = "0.6.2" }
libc = "0.2"
thiserror = "2.0.18"
rust-ini = "0.21"
tauri-plugin-shell = "2"
regex = "1.12.3"

[profile.release]
panic = "abort" # パニック時にスタックトレースを生成せず、即座に終了する（サイズ削減）
codegen-units = 1 # コンパイル時間は長くなりますが、より強力に最適化されます
lto = true # リンク時最適化（Link Time Optimization）を有効化
opt-level = "s" # または "z"。バイナリサイズを最小化するための最適化レベル
strip = true # デバッグシンボルを削除する（サイズが大幅に減ります）

